[css-grid] Don't create renderers for whitespace nodes https://bugs.webkit.org/show_bug.cgi?id=212220

Reviewed by Manuel Rego Casasnovas.

LayoutTests/imported/w3c:

Import WPT test.

* web-platform-tests/css/css-grid/grid-items/w3c-import.log:
* web-platform-tests/css/css-grid/grid-items/whitespace-in-grid-item-001-expected.html: Added.
* web-platform-tests/css/css-grid/grid-items/whitespace-in-grid-item-001.html: Added.

Source/WebCore:

Even with 'white-space: pre' we shouldn't create RenderTexts
for whitespace-only nodes in grid layout, according to
https://drafts.csswg.org/css-grid/#grid-items

This patch is based on https://codereview.chromium.org/16888008

Tests: fast/text/simple-line-layout-with-zero-sized-font.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/whitespace-in-grid-item-001.html

* rendering/updating/RenderTreeUpdater.cpp:
(WebCore::RenderTreeUpdater::textRendererIsNeeded):

LayoutTests:

Update test expectation.

* fast/text/simple-line-layout-with-zero-sized-font-expected.txt:


Canonical link: https://commits.webkit.org/225101@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262033 268f45cc-cd09-0410-ab3c-d52691b4dbfc